2007-02 19  Yen-Ju Chen <yjchenx at gmail>

        * Format README in reStructuedText

2007-02-19  Guenther Noack <guenther@unix-ag.uni-kl.de>
	
	* UKDistributedView.m: got it working (only small fix here,
	  the main problem was that the example didn't set all needed
	  values.)
	* ChangeLog: Added ChangeLog entry from when I fixed the segfault
	  issue when dragging on GS.

2006-??-??  Guenther Noack <guenther@unix-ag.uni-kl.de>

	* UKDistributedView.m: prevent crashes by checking if events
	  have deltaX and deltaY fields, which they don't always have
	  on GNUstep.

2006-10-31  Quentin Mathe <qmathe@club-internet.fr>

	* GNUmakefile.postamble: Modified to fix compilation (no more Headers 
	directory).

2006-10-31  Quentin Mathe <qmathe@club-internet.fr>

	* UKDistributedView.h:
	* UKDistributedView.m:
	* UKFinderIconCell.h:
	* UKFinderIconCell.m:
	* EtoileCompatibility.h:
	* Cocoa/Cocoa.h:
	* GNUmakefile:
	* GNUmakefile.postamble: 
	* COPYING:
	* README:
	* INSTALL:
	Imported this new framework resulting from the split of EtoileExtensionsKit
	in three modules (EtoileUI, EtoileFoundation, DistributedView).