@@ -1,3 +1,7 @@
+2007-05 01  Yen-Ju Chen <yjchenx at gmail>
+
+	* Turn into framework.
+
 2007-02 19  Yen-Ju Chen <yjchenx at gmail>
 
         * Format README in reStructuedText
